# plasma-potd-windows-spotlight

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  windowsspotlightprovider.cpp  windowsspotlightprovider.h  windowsspotlightprovider.json
